--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ### VisualStudioCode template
+.package-lock.json
 .idea
 .vscode/*
 !.vscode/settings.json
@@ -549,3 +550,5 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
+package-lock.json
+package-lock.json
